# minecraft-server-launcher

./: .gitignore  Cargo.toml  Makefile  README.md  main.go  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: performance.rs
benches/backup/: backup_bench_test.go
benches/server/: server_bench_test.go
internal/backup/: backup.go  backup_test.go
internal/config/: config.go  config_test.go
internal/download/: download.go  download_test.go
internal/logger/: logger.go
internal/server/: server.go  server_test.go
internal/update/: update.go  update_bench_test.go  update_test.go
internal/utils/: http.go  utils.go  utils_test.go  validation.go  validation_bench_test.go  validation_test.go
src/: constants.rs  lib.rs  main.rs
src/api/: mod.rs  paper.rs
src/config/: config.rs  mod.rs  settings.rs
src/download/: download.rs  file.rs  http.rs  mod.rs
src/server/: java.rs  memory.rs  mod.rs  runner.rs  server.rs
src/utils/: checksum.rs  eula.rs  helpers.rs  jar.rs  mod.rs  utils.rs  validation.rs
tests/: integration_test.rs
