[package]
name = "minecraft-server-launcher"
version = "0.3.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 1
incremental = true
debug = false
split-debuginfo = "off"
codegen-units = 256
overflow-checks = false
panic = "abort"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 1
incremental = true
codegen-units = 16
debug = "line-tables-only"

[lib]
name = "minecraft_server_launcher"
path = "src/lib.rs"

[[bin]]
name = "paper-launcher"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sysinfo = { version = "0.30", default-features = false }
indicatif = { version = "0.17", default-features = false }
clap = { version = "4.4", features = ["derive", "std"], default-features = false }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
tempfile = { version = "3.8", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"], default-features = false }

[[bench]]
name = "performance"
harness = false

